Fix Overflow Portfolio

--- a/app/styles/page/_portfolio.scss
+++ b/app/styles/page/_portfolio.scss
@@ -41,6 +41,8 @@
         line-height: 9em;
         text-align: center;
 
+        overflow: hidden;
+
         @extend .column;
 
         img {
