--- a/app/styles/portfolio.css
+++ b/app/styles/portfolio.css
@@ -2039,19 +2039,20 @@ footer .social {
   background-size: cover;
   line-height: 9em;
   text-align: center;
+  overflow: hidden;
 }
-/* line 46, page/_portfolio.scss */
+/* line 48, page/_portfolio.scss */
 .portfolio-container .portfolio-block img {
   max-width: 100%;
   max-height: 100%;
   width: auto;
   height: auto;
 }
-/* line 53, page/_portfolio.scss */
+/* line 55, page/_portfolio.scss */
 .portfolio-container .portfolio-block .portfolio-descr {
   display: none;
 }
-/* line 57, page/_portfolio.scss */
+/* line 59, page/_portfolio.scss */
 .portfolio-container .portfolio-block .portfolio-overlay {
   position: absolute;
   top: 100%;
@@ -2067,37 +2068,37 @@ footer .social {
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-/* line 72, page/_portfolio.scss */
+/* line 74, page/_portfolio.scss */
 .portfolio-container .portfolio-block .portfolio-overlay:hover {
   background-color: rgba(0, 0, 0, 0.85);
 }
-/* line 76, page/_portfolio.scss */
+/* line 78, page/_portfolio.scss */
 .portfolio-container .portfolio-block .site-link {
   display: block;
   height: 100%;
 }
-/* line 81, page/_portfolio.scss */
+/* line 83, page/_portfolio.scss */
 .portfolio-container .portfolio-block .portfolio-overlay + .portfolio-overlay {
   left: 50%;
 }
-/* line 85, page/_portfolio.scss */
+/* line 87, page/_portfolio.scss */
 .portfolio-container .portfolio-block .portfolio-overlay:only-of-type {
   width: 100%;
 }
-/* line 90, page/_portfolio.scss */
+/* line 92, page/_portfolio.scss */
 .portfolio-container .portfolio-block:hover .portfolio-overlay {
   top: 0;
 }
 
-/* line 98, page/_portfolio.scss */
+/* line 100, page/_portfolio.scss */
 .no-js .portfolio-filters {
   display: none;
 }
-/* line 104, page/_portfolio.scss */
+/* line 106, page/_portfolio.scss */
 .no-js .portfolio-container .portfolio-block .portfolio-overlay {
   display: none;
 }
-/* line 107, page/_portfolio.scss */
+/* line 109, page/_portfolio.scss */
 .no-js .portfolio-container .portfolio-block .portfolio-overlay + .portfolio-overlay {
   display: block;
   width: 100%;
@@ -2105,70 +2106,70 @@ footer .social {
 }
 
 @media screen and (max-width: 70em) and (min-width: 60.1em) {
-  /* line 118, page/_portfolio.scss */
+  /* line 120, page/_portfolio.scss */
   .portfolio-container .portfolio-block {
     width: 25%;
   }
-  /* line 121, page/_portfolio.scss */
+  /* line 123, page/_portfolio.scss */
   .portfolio-container .portfolio-block:nth-child(4n) {
     margin-right: 0;
   }
 }
 @media screen and (max-width: 60em) {
-  /* line 131, page/_portfolio.scss */
+  /* line 133, page/_portfolio.scss */
   .portfolio-container .portfolio-block {
     width: 50%;
   }
-  /* line 133, page/_portfolio.scss */
+  /* line 135, page/_portfolio.scss */
   .portfolio-container .portfolio-block .portfolio-overlay {
     position: absolute;
     top: inherit;
     bottom: 0;
     height: 40px;
   }
-  /* line 139, page/_portfolio.scss */
+  /* line 141, page/_portfolio.scss */
   .portfolio-container .portfolio-block .portfolio-overlay .magnify-icon:last-child {
     left: 50%;
     margin-left: -8px;
   }
-  /* line 145, page/_portfolio.scss */
+  /* line 147, page/_portfolio.scss */
   .portfolio-container .portfolio-block:hover .portfolio-overlay {
     top: inherit;
   }
 }
 @media screen and (max-width: 65em) and (min-width: 48.1em) {
-  /* line 154, page/_portfolio.scss */
+  /* line 156, page/_portfolio.scss */
   .portfolio-container .portfolio-block {
     width: 33.3333333%;
   }
 }
 @media screen and (max-width: 48em) {
-  /* line 162, page/_portfolio.scss */
+  /* line 164, page/_portfolio.scss */
   .portfolio-filters .portfolio-filter {
     width: 50%;
     margin-bottom: 10px;
   }
 }
 @media screen and (max-width: 48em) and (min-width: 32.3em) {
-  /* line 171, page/_portfolio.scss */
+  /* line 173, page/_portfolio.scss */
   .portfolio-filters .skill-filter {
     width: 50%;
     margin-bottom: 10px;
   }
 
-  /* line 177, page/_portfolio.scss */
+  /* line 179, page/_portfolio.scss */
   .portfolio-container .skill-block {
     width: 50%;
   }
 }
 @media screen and (max-width: 32.25em) {
-  /* line 185, page/_portfolio.scss */
+  /* line 187, page/_portfolio.scss */
   .portfolio-container .portfolio-block {
     width: 100%;
   }
 }
 @media screen and (max-width: 65em) {
-  /* line 192, page/_portfolio.scss */
+  /* line 194, page/_portfolio.scss */
   .stand .page-name {
     font-size: 69%;
     letter-spacing: 2px;
@@ -2176,7 +2177,7 @@ footer .social {
   }
 }
 @media screen and (max-width: 43.2em) {
-  /* line 200, page/_portfolio.scss */
+  /* line 202, page/_portfolio.scss */
   .stand .page-name {
     letter-spacing: 1px;
   }
